Add finished task state functionality
Keep task deletion
Fix and add unit tests
Fix and add documentation
Fix punishment
Bump app versions
